[package]
name = "survivor-cli-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.1"
futures = "0.3"
termion-input-tokio = "0.3.0"
tokio = "1.24.1"
event_system = "0.1.1"
rand = "0.8.5"

[dependencies.uuid]
version = "1.2.2"
features = ["v4", "fast-rng", "macro-diagnostics"]
